package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "rollup_bundle")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "api",
    srcs = glob(["api/**/*.ts"]),
)

ts_library(
    name = "prow",
    srcs = glob(["prow/*.ts"]) + ["vendor.d.ts"],
    deps = [
        ":api",
        "@npm//:moment",
    ],
)

rollup_bundle(
    name = "prow_bundle",
    entry_point = "prow/cmd/deck/static/prow/prow",
    deps = [
        ":prow",
        "@npm//:moment",
    ],
)

rollup_bundle(
    name = "plugins",
    srcs = [
        "plugins-script.js",
    ],
    entry_point = "prow/cmd/deck/static/plugins-script.js",
    deps = [
        "@npm//:dialog-polyfill",
    ],
)

rollup_bundle(
    name = "pr",
    srcs = [
        "pr-script.js",
    ],
    entry_point = "prow/cmd/deck/static/pr-script.js",
    deps = [
        "@npm//:dialog-polyfill",
    ],
)

rollup_bundle(
    name = "tide",
    srcs = [
        "tidescript.js",
    ],
    entry_point = "prow/cmd/deck/static/tidescript.js",
)

rollup_bundle(
    name = "command_help",
    srcs = [
        "command-help-script.js",
    ],
    entry_point = "prow/cmd/deck/static/command-help-script.js",
    deps = [
        "@npm//:dialog-polyfill",
    ],
)

filegroup(
    name = "resources",
    srcs = glob(
        ["**/*"],
        exclude = ["**/*.js"],
    ) + glob(["extensions/*.js"]),
)

filegroup(
    name = "all-scripts",
    srcs = [
        ":command_help",
        ":plugins",
        ":pr",
        ":prow_bundle",
        ":tide",
    ],
)

filegroup(
    name = "static",
    srcs = [
        ":all-scripts",
        ":resources",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
